@@ -10,14 +10,15 @@ object Main {
       .set("spark.driver.maxResultSize", "0")
       .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
       .set("spark.kryoserializer.buffer.max", "2047m")
-      .registerKryoClasses(Array(classOf[SearchSpaceTree]))
+      .set("spark.executor.extraJavaOptions", "-XX:ThreadStackSize=2048 -XX:+UseCompressedOops -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75")
+      .registerKryoClasses(Array(classOf[SearchSpaceTree], classOf[ReversedSearchSpaceTree]))
     val sc = new SparkContext(conf)
     val inputFolder = args(0)
     val outputFolder = args(1)
     val tempFolder = args(2)
     val inputFile = inputFolder + "/bots_20m_15.csv"
     val outputFile = outputFolder
-    val readInRDD = sc.textFile(inputFile, INPUT_PARTS).map(_.split(",")).cache()
+    val readInRDD = sc.textFile(inputFile, INPUT_PARTS).map(_.split(","))
     val attributesNums = readInRDD.first.length
     //    println("Unique Attr Nums:")
     val columnUniqueMap = 0.until(attributesNums).toList.map {
@@ -39,7 +40,7 @@ object Main {
     val columnSorted = columnUniqueMap
       .map(_.size)
       .zipWithIndex
-      .sortBy(x => -x._1)
+      .sortBy(x => x._1)
       .map(x => x._2)
     //    columnSorted.foreach(
     //      x => {
@@ -52,7 +53,6 @@ object Main {
     val space = new SearchSpaceTree(attributesNums)
     val logger = new LogAccumulator(0)
     for (i <- columnSorted.indices) {
-      val broadSpace = sc.broadcast(space)
       val hashMap = columnUniqueMap(columnSorted(i))
       val lines = readInRDD
         .map {
@@ -60,37 +60,44 @@ object Main {
         }.partitionBy(new MyHashPartitioner(hashMap.size))
         .cache()
 
-      val allLHSCombinations = // 2m45
+      var allLHSCombinations = // 2m45
         Combinator.genRealFullCombinations(columnSorted.drop(i + 1).sorted)
           .map { x =>
             (x :+ columnSorted(i))
               .sorted
           }
-      /*val needlhsset = columnSorted.take(i+1).toSet // 2m51.019
-      val allLHSCombinations = space.vertices.toArray
-      .flatMap(x => {
-        val tmpset = x._1.toSet
-        if(x._2.toArray.map(x => x._2).reduce((x,y) => (x | y)) && needlhsset.subsetOf(tmpset)){
-          List[List[Int]](tmpset.diff(needlhsset).+(columnSorted(i)).toList.sorted).iterator
-        }else{
-          List[List[Int]]().iterator
-        }
-      }).toList*/
-      val broadLHS = sc.broadcast(allLHSCombinations)
-      val mapped = lines.mapPartitionsWithIndex(
-        (partindex, x) =>
-          List[(ReversedSearchSpaceTree, LogAccumulator)]
-            (Validator.validatePartition(partindex, x.toList.map(x => x._2), broadSpace, i, broadColumn, broadLHS)).iterator)
-      val result = mapped.reduce((x, y) => {
-        x._1.merge(y._1)
-        x._2.merge(y._2)
-        x
-      })
-      space.merge(result._1)
-      logger.merge(result._2)
-      broadSpace.unpersist()
+      val DROP_SIZE = 1024
+      while (allLHSCombinations.nonEmpty) {
+        val someLHSCombinations = allLHSCombinations.takeRight(DROP_SIZE)
+        allLHSCombinations = allLHSCombinations.dropRight(DROP_SIZE)
+        val broadSpace = sc.broadcast(space)
+        /*val needlhsset = columnSorted.take(i+1).toSet // 2m51.019
+        val allLHSCombinations = space.vertices.toArray
+        .flatMap(x => {
+          val tmpset = x._1.toSet
+          if(x._2.toArray.map(x => x._2).reduce((x,y) => (x | y)) && needlhsset.subsetOf(tmpset)){
+            List[List[Int]](tmpset.diff(needlhsset).+(columnSorted(i)).toList.sorted).iterator
+          }else{
+            List[List[Int]]().iterator
+          }
+        }).toList*/
+        val broadLHS = sc.broadcast(someLHSCombinations)
+        val mapped = lines.mapPartitionsWithIndex(
+          (partindex, x) =>
+            List[(ReversedSearchSpaceTree, LogAccumulator)]
+              (Validator.validatePartition(partindex, x.toList.map(x => x._2), broadSpace, i, broadColumn, broadLHS)).iterator)
+        val result = mapped.reduce((x, y) => {
+          x._1.merge(y._1)
+          x._2.merge(y._2)
+          x
+        })
+        space.merge(result._1)
+        logger.merge(result._2)
+        broadSpace.unpersist()
+        broadLHS.unpersist()
+      }
       lines.unpersist()
-      broadLHS.unpersist()
+
     }
     broadColumn.unpersist()
     val outputstrs = IOController.FDstoString(IOController.FDsShrink(space.toFDs))
